tests/integration/snapshots/mappings/missing_file.txt
Error: [ROOT]/contracts/main[LINE]: error: Failed to import: Failed to read mapped file @core/math.tolk: [NOT_FOUND]
   2 |             import "@core/math"
     |                    ^^^^^^^^^^^^

